--- a/Site/public/tela-cadastro.html
+++ b/Site/public/tela-cadastro.html
@@ -8,7 +8,9 @@
 
     <title>keep Swimming | Cadastro</title>
 
+
     <script src="./assets/js/funcoes.js"></script>
+    <script src="./javaScript/cadastro.js"></script>
     <link rel="stylesheet" href="./css/tela-cadastro.css">
     <!-- <link rel="stylesheet" href="../css/index.css"> -->
 
@@ -41,138 +43,67 @@
         <div class="bubble bubble--12"></div>
         <div id="octocat"></div>
 
+       
         <div class="formulario">
-            <h2>Bem-vindo!</h2>
-            <div class="campos">
-                <div class="ladoEsquerdo">
+                <h2>Bem-vindo!</h2>
+                <form id="form_cadastro" method="post" onsubmit="return bt_cadastro()">
 
-                    <div class="labels">
-                        <span class="tipo_campo">Razão Social:</span>
-                        <input id="nome_input" type="text" placeholder="Nome da empresa">
+                    <div class="ladoEsquerdo">
+
+                        <div class="labels">
+                            <span class="tipo_campo">Razão Social:</span>
+                            <input name="empresa" id="nome_input" type="text" placeholder="Nome da empresa">
+                        </div>
+
+                        <div class="labels">
+                            <span class="tipo_campo">E-mail:</span>
+                            <input name="email" id="email_input" type="text" placeholder="meuemail@provedor.com">
+                        </div>
+
+                        <div class="labels">
+                            <span class="tipo_campo">CEP</span>
+                            <input name="cep" id="cep_input" type="text" placeholder="CEP">
+                        </div>
+
+                        <div class="labels">
+                            <span class="tipo_campo">Senha:</span>
+                            <input name="senha" id="senha_input" type="password" placeholder="******">
+                        </div>
                     </div>
 
-                    <div class="labels">
-                        <span class="tipo_campo">E-mail:</span>
-                        <input id="email_input" type="text" placeholder="meuemail@provedor.com">
+
+                    <div class="ladoDireito">
+
+                        <div class="labels">
+                            <span class="tipo_campo">Confirmação de E-mail</span>
+                            <input name="confEmail" type="text" id="confirmacao_email_input"
+                                placeholder="Confirme E-mail">
+                        </div>
+
+                        <div class="labels">
+                            <span class="tipo_campo">CNPJ</span>
+                            <input name="cnpj" id="cnpj_input" type="text" placeholder="CNPJ">
+                        </div>
+
+                        <div class="labels">
+                            <span class="tipo_campo">Confirmação da Senha:</span>
+                            <input name="confirmacaosenha" id="confirmacao_senha_input" type="password" placeholder="******">
+                        </div>
+
+                        <div class="div_botao">
+                            <button class="btn efeito">Navegar</button>
+                        </div>
                     </div>
-
-                    <div class="labels">
-                        <span class="tipo_campo">CEP</span>
-                        <input id="cep_input" type="text" placeholder="CEP">
-                    </div>
-
-                    <div class="labels">
-                        <span class="tipo_campo">Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******">
-                    </div>
-                </div>
-
-
-                <div class="ladoDireito">
-
-                    <div class="labels">
-                        <span class="tipo_campo">Confirmação de E-mail</span>
-                        <input type="text" id="confirmacao_email_input" placeholder="Confirme E-mail">
-                    </div>
-
-                    <div class="labels">
-                        <span class="tipo_campo">CNPJ</span>
-                        <input id="cnpj_input" type="text" placeholder="CNPJ">
-                    </div>
-
-                    <div class="labels">
-                        <span class="tipo_campo">Confirmação da Senha:</span>
-                        <input id="confirmacao_senha_input" type="password" placeholder="******">
-                    </div>
-
-                    <div class="div_botao">
-                        <button class="btn efeito" onclick="cadastrar()">Navegar</button>
-                    </div>
-                </div>
+                </form>
             </div>
-        </div>
+            <div id="div_aguardar" class="loading-div">
+                <img src="./assets/aguarde-pink.gif" id="loading-gif">
+
+            </div>
+
+            <div id="div_erros_login"></div>
+        
 </body>
 
 </html>
 
-<script>
-    function cadastrar() {
-        //        aguardar();
-
-        //Recupere o valor da nova input pelo nome do id
-        // Agora vá para o método fetch logo abaixo
-        var nomeVar = nome_input.value;
-        var emailVar = email_input.value;
-        var confirmaremailVar = confirmacao_email_input.value;
-        var cepVar = cep_input.value;
-        var cnpjVar = cnpj_input.value;
-        var senhaVar = senha_input.value;
-        var confirmacaoSenhaVar = confirmacao_senha_input.value;
-
-        if (nomeVar == "" || emailVar == "" || senhaVar == "" || confirmacaoSenhaVar == "") {
-            cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "Preencha todos os campos para prosseguir!";
-
-            finalizarAguardar();
-            return false;
-        } else {
-            setInterval(sumirMensagem, 5000)
-        }
-
-        if (emailVar.indexOf("@") == -1 || emailVar.indexOf(".com") == -1) {
-            cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "Ops, e-mail inválido! Verifique e tente novamente.";
-            finalizarAguardar();
-            return false;
-        } else if (emailVar != confirmaremailVar) {
-            alert("Email invalido")
-        }
-
-        if (senhaVar != confirmacaoSenhaVar) {
-            cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "As senhas inseridas devem ser iguais para prosseguir!";
-            finalizarAguardar();
-            return false;
-        } else {
-            setInterval(sumirMensagem, 5000)
-        }
-
-        // Enviando o valor da nova input
-        fetch("/usuarios/cadastrar", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                // crie um atributo que recebe o valor recuperado aqui
-                // Agora vá para o arquivo routes/usuario.js
-                nomeServer: nomeVar,
-                emailServer: emailVar,
-                cepServer: cepVar,
-                cnpjServer: cnpjVar,
-                senhaServer: senhaVar
-            })
-        }).then(function(resposta) {
-
-            console.log("resposta: ", resposta);
-
-            if (resposta.ok) {
-                console.log('bananinha');
-                window.location = "./tela-login.html";
-                limparFormulario();
-                finalizarAguardar();
-            } else {
-                throw ("Houve um erro ao tentar realizar o cadastro!");
-            }
-        }).catch(function(resposta) {
-            console.log(`#ERRO: ${resposta}`);
-            finalizarAguardar();
-        });
-
-        return false;
-    }
-
-    function sumirMensagem() {
-        cardErro.style.display = "none"
-    }
-</script>
