--- a/Site/public/tela-login.html
+++ b/Site/public/tela-login.html
@@ -50,7 +50,7 @@
 
             <div class="formulario">
                 <h2>Olá de volta!</h2>
-                <form id="form_login" method="post" onsubmit="return entrar()"></form>
+                <form id="form_login" method="post" onsubmit="return entrar()">
                     <span class="tipo_campo">E-mail:</span>
                         <input name="email" id="email_input" type="text" placeholder="Login">
 
