ajustando-css-telacadastro

--- a/Site/public/tela-cadastro.html
+++ b/Site/public/tela-cadastro.html
@@ -48,6 +48,8 @@
                 <h2>Bem-vindo!</h2>
                 <form id="form_cadastro" method="post" onsubmit="return bt_cadastro()">
 
+                    <div class="roles">
+
                     <div class="ladoEsquerdo">
 
                         <div class="labels">
@@ -90,6 +92,8 @@
                             <input name="confirmacaosenha" id="confirmacao_senha_input" type="password" placeholder="******">
                         </div>
 
+                    </div>
+                    
                         <div class="div_botao">
                             <button class="btn efeito">Navegar</button>
                         </div>
