--- a/Site/public/dash-estatica/graficos.html
+++ b/Site/public/dash-estatica/graficos.html
@@ -10,6 +10,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 	<script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
 	<script src="http://www.chartjs.org/samples/latest/utils.js"></script>
+	<script src="../../src/controllers/medidaController.js"></script>
 	
 	<style>
 		.canvas {
@@ -85,9 +86,7 @@
 
 		<script>
 
-			function consumoCPU(){
-				consumo_cpu.innerHTML = ``;
-			}
+
 
 			var context = document.getElementById("chart").getContext("2d");
 			context.canvas.width = 1000;
