--- a/Site/public/dash-estatica/cadastro-máquina.html
+++ b/Site/public/dash-estatica/cadastro-máquina.html
@@ -78,7 +78,7 @@
                             <input type="text" name="permissao" placeholder="true / false" id="permissao_">
 
                             <label for="fabricante">Fabricante</label>
-                            <input type="text" name="fabricante" placeholder="true / false" id="fabricante_">
+                            <input type="text" name="fabricante" placeholder="GNU" id="fabricante_">
 
                           
                         </div>
