--- a/Site/public/dash-estatica/graficos.html
+++ b/Site/public/dash-estatica/graficos.html
@@ -82,11 +82,11 @@
 				<div class="inf_dash">
 
 
-					<select name="" id="sel_comp" class="sel_componentescss">
+					<select name="" id="sel_comp" class="sel_componentescss" >
 						<option value="">--Selecione--</option>
+						<option value="1">Memoria</option>
+						<option value="2">processador</option>
 						<option value="">ram</option>
-						<option value="">processador</option>
-						<option value="">Memoria</option>
 						<option value="">Memoria virtual</option>
 					</select>
 
@@ -115,7 +115,9 @@
 
 		let proximaAtualizacao;
 
+
 		function obterDadosGrafico(idMaquina) {
+
 				if (proximaAtualizacao != undefined) {
 					clearTimeout(proximaAtualizacao);
 				}
@@ -139,16 +141,18 @@
 		}
 
 
-		function plotarGrafico(resposta, idSensor) {
+		function plotarGrafico(resposta, idMaquina) {
 			console.log('iniciando plotagem do gráfico...');
+			var componenteSelecionado = sel_comp.value;
 
+			
 			
 			var dados = {
 				labels: [],
 				datasets: [
 					{
-					
-						label: 'uso',
+						
+						label: 'Memoria',
 						borderColor: '#32B9CD',
 						backgroundColor: '#32b9cd8f',
 						fill: true,
@@ -161,8 +165,27 @@
             var registro = resposta[i];
             console.log("registro::::::::");
             console.log(registro);
-            dados.labels.push(registro.momento_grafico);
-            dados.datasets[0].data.push(registro);
+
+			var startIndex = registro.Hora.indexOf('2022 ', 0);
+			var endIndex = registro.Hora.indexOf(' ', startIndex);
+			var registroHora = registro.Hora.slice(endIndex, endIndex + 9);
+
+			
+			console.log(registroHora);
+			
+			// if(componenteSelecionado == 1)
+			// {
+			// 	dados.datasets[0].label = 'Memoria'
+			// 	var pushDado = dados.datasets[0].data.push(registro.dadosMemoria);
+
+			// } else if(componenteSelecionado == 2)
+			// {
+			// 	data.datasets[0].label = 'Processador';
+			// 	var pushDado = dados.datasets[0].data.push(registro.dadosProcessador);
+			// }
+
+            dados.labels.push(registroHora);
+            dados.datasets[0].data.push(registro.dadosMemoria);
         }
 
 			console.log(JSON.stringify(dados));
@@ -207,9 +230,9 @@
 
 		var context = document.getElementById("chart").getContext("2d");
 		context.canvas.width = 1000;
-		context.canvas.height = 300;
+		context.canvas.height = 400;
 	
-		var configuration = {
+		window.grafico_linha = Chart.Line(context, {
 			type: 'line',
 			data: dados,
 			options: {
@@ -241,9 +264,88 @@
 	
 				}
 			}
-		};
+		});
 	
-		var chart = new Chart(context, configuration);
+		//var chart = new Chart(context, window.);
+		setTimeout(() => atualizarGrafico(idMaquina, dados), 3000);
+    }
+
+	function atualizarGrafico(idMaquina, dados) {
+        fetch(`/medidas/tempo-real/${idMaquina}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (novoRegistro) {
+
+					var startIndex = novoRegistro[0].Hora.indexOf('2022 ', 0);
+					var endIndex = novoRegistro[0].Hora.indexOf(' ', startIndex);
+					var registroHora = novoRegistro[0].Hora.slice(endIndex, endIndex + 9);
+
+                    console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+                    console.log(`Dados atuais do gráfico: ${dados.labels}`);
+                    console.log(`Dados atuais do gráfico: ${dados.datasets[0].data}`);
+
+                    // tirando e colocando valores no gráfico
+                    dados.labels.shift(); // apagar o primeiro
+                    dados.labels.push(registroHora); // incluir um novo momento
+                    dados.datasets[0].data.shift();  // apagar o primeiro de umidade
+                    dados.datasets[0].data.push(novoRegistro[0].dadosMemoria); // incluir uma nova medida de umidade
+
+                    // if(novoRegistro[0].logLuminosidade < 300) {
+                    //     dados.datasets[0].borderColor = "#cd32328f";
+                    //     dados.datasets[0].backgroundColor = "#cd32328f";
+                    //     div_msg.innerHTML = `<h2 style="color: #cd32328f;">Luminosidade ${novoRegistro[0].logLuminosidade}, muito abaixo dos padrões ideais, estado crítico!!!</h2><br>
+                    //         <h4 style="color: #fff;">Resolva URGENTEMETE o controle de Luminosidade da sua Estufa!</h4>
+                    //         `
+                    // } else if (novoRegistro[0].logLuminosidade < 400) {
+                    //     dados.datasets[0].borderColor = "#eb720f8f";
+                    //     dados.datasets[0].backgroundColor = "#eb720f8f";
+                    //     div_msg.innerHTML = `<h2 style="color: #eb720f8f;">Luminosidade ${novoRegistro[0].logLuminosidade}, abaixo dos padrões ideais, estado emergêncial</h2><br>
+                    //     <h4 style="color: #fff;"> Resolva o controle de Luminosidade da sua Estufa o mais cedo possível</h4>`
+                    // } else if (novoRegistro[0].logLuminosidade < 500) {
+                    //     dados.datasets[0].borderColor = "#dfca158f";
+                    //     dados.datasets[0].backgroundColor = "#dfca158f";
+                    //     div_msg.innerHTML = `<h2 style="color: #dfca158f;">Luminosidade ${novoRegistro[0].logLuminosidade}, abaixo do padrão ideal </h2><br>
+                    //     <h4 style="color: #fff;"> Cheque o controle de Luminosidade da sua Estufa</h4>`
+                    // } else if (novoRegistro[0].logLuminosidade < 900) {
+                    //     dados.datasets[0].borderColor = "#6bcd328f";
+                    //     dados.datasets[0].backgroundColor = "#6bcd328f";
+                    //     div_msg.innerHTML = `<h2 style="color: #6bcd328f;">Luminosidade ${novoRegistro[0].logLuminosidade},  nos padrões ideais</h2> <br>
+                    //     <h4 style="color: #fff;"> Nada a se fazer</h4>`
+                    // } else if (novoRegistro[0].logLuminosidade < 1000) {
+                    //     dados.datasets[0].borderColor = "#dfca158f";
+                    //     dados.datasets[0].backgroundColor = "#dfca158f";
+                    //     div_msg.innerHTML = `<h2 style="color: #dfca158f;">Luminosidade ${novoRegistro[0].logLuminosidade}, acima dos padrões ideais </h2><br>
+                    //     <h4 style="color: #fff;">  Cheque o controle de Luminosidade da sua Estufa</h4>`
+                    // } else if (novoRegistro[0].logLuminosidade <= 1100) {
+                    //     dados.datasets[0].borderColor = "#eb720f8f";
+                    //     dados.datasets[0].backgroundColor = "#eb720f8f";
+                    //     div_msg2.innerHTML = `<h2 style="color: #eb720f8f;">Luminosidade ${novoRegistro[0].logLuminosidade}, acima dos padrões ideais, estado emergêncial</h2><br>
+                    //     <h4 style="color: #fff;">Resolva o controle de Luminosidade da sua Estufa o mais cedo possível</h4>`
+                    // } else if (novoRegistro[0].logLuminosidade > 1100) {
+                    //     dados.datasets[0].borderColor = "#cd32328f";
+                    //     dados.datasets[0].backgroundColor = "#cd32328f";
+                    //     div_msg.innerHTML = `<h2 style="color: #cd32328f;">Luminosidade ${novoRegistro[0].logLuminosidade}, muito acima dos padrões ideais, estado crítico!!!</h2><br>
+                    //     <h4 style="color: #fff;"> Resolva URGENTEMETE o controle de Luminosidade da sua Estufa!</h4>`
+                    // }
+
+                    window.grafico_linha.update();
+
+                    proximaAtualizacao = setTimeout(() => atualizarGrafico(idMaquina, dados), 5000);
+
+                });
+
+                if(novoRegistro[0].dadosMemoria < 650) {
+                    //canvas_grafico.dados.datasets[0].backgroundColor = "red"
+                }
+
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+                proximaAtualizacao = setTimeout(() => atualizarGrafico(idMaquina, dados), 5000);
+            }
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+
     }
 	
 
