--- a/Site/public/dash-estatica/graficos.html
+++ b/Site/public/dash-estatica/graficos.html
@@ -35,6 +35,7 @@
 				<li><a href="./dashboard.html"><img src="./dash.png" alt="" height="25px"> Dashboard</a> </li>
 				<li> <a href="graficos.html"><img src="./monitoramento.png" alt="" height="25px">Monitoramento</a></li>
 				<li> <a href="dash-cadastros.html"><img src="./perfil.png" alt="" height="25px">Cadastrar Desenvolvedor</a></li>
+				<li> <a href="cadastro-maquina.html"><img src="./perfil.png" alt="" height="25px">Cadastrar Máquina</a></li>
 				<li> <a href="https://app.pipefy.com/public/form/w7YSTr_A">
 					<img src="./suporte.png" alt="" height="25px"> Suporte</a></li>
 				<li><a href="../index.html">
