--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -20,10 +20,10 @@
 
 </head>
 
-<!-- <body> -->
+ <body> 
     <!-- Chama o metodo que so permite permanecer na pagina se tiver passado pelo login antes  -->
 
-    <body onload="validarSessao(),  obterDadosGrafico(1)">  
+    <!-- <body onload="validarSessao(),  obterDadosGrafico(1)">  -->
 
     <div class="header">
         <img src="../assets/icons/logo-padrao.png" alt="">
@@ -40,7 +40,7 @@
                 <li><a href="graficos.html"><img src="./monitoramento.png" alt="" height="25px">Monitoramento</a></li>
                 <li><a href="dash-cadastros.html"><img src="./perfil.png" alt="" height="25px">Cadastrar
                         Desenvolvedor</a></li>
-                <li><a href="./cadastro-máquina.html">Cadastro de maquina</a></li>
+                <li><a href="./cadastroMaquina.html">Cadastro de maquina</a></li>
                 <li><a href="https://app.pipefy.com/public/form/w7YSTr_A">
                         <img src="./suporte.png" alt="" height="25px"> Suporte</a></li>
                 <li><a href="../index.html">
